fixing image svg location

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="logo-column">
         <div>
-          <img src="../starter-code/assets/shared/logo.svg" class="top-vertical-align">
+          <img src="./assets/shared/logo.svg" class="top-vertical-align">
           <hr class="top-vertical-align" id="hr-custom"/>
         </div>
       </div>
